Hacks in a fix so that social icons display vertically on small screens

--- a/src/assets/sass/_social.scss
+++ b/src/assets/sass/_social.scss
@@ -1,8 +1,6 @@
 .social-icons {
 
-  align-items: center;
-  display: flex;
-  min-height: 100%;
+  height: 100%;
 
   a {
     color: inherit;
@@ -24,5 +22,30 @@
   }
   .linkedin:hover {
     color: #007bb6;
+  }
+}
+
+.social-icons-horizontal {
+  align-items: center;
+  display: none;
+  min-height: 100%;
+}
+
+.social-icons-vertical {
+  height: 100%;
+
+  .row {
+    align-items: center;
+    display: flex;
+    height: 33%;
+  }
+}
+
+@media (min-width: 768px) {
+  .social-icons-vertical {
+    display: none;
+  }
+  .social-icons-horizontal {
+    display: flex;
   }
 }
